Update and rename games.html to index.html

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       if (correct.includes(input)) {
         document.getElementById('message').textContent = "🥳 yippiee";
         setTimeout(() => {
-          window.location.href = "index.html"; // Ganti sesuai nama file utama
+          window.location.href = "index1.html"; // Ganti sesuai nama file utama
         }, 2000);
       } else {
         document.getElementById('message').textContent = "😝🤭 well well well salah";
